Add question marks in UI for no architecture

--- a/app/views/curl_requests/index.html.erb
+++ b/app/views/curl_requests/index.html.erb
@@ -20,7 +20,7 @@
     <% @curl_requests.each do |curl_request| %>
       <tr>
         <td>
-          <%= curl_request.architecture %>
+          <%= curl_request.architecture ? curl_request.architecture : "???" %>
         </td>
         <td>
           <%= curl_request.operating_system %>
